Lean/tests/ok/Check.lean
lemma main : 1 + 1 = 2 := rfl

