Lean/tests/parse_error/Check.lean
lama main : 1 + 1 = 2 : rfl

